==> flyghost/OneOS-V2.1.0/drivers/hal/hdsc/drivers/f46x/drv_gpio.c <==
#include <os_memory.h>
#include "drv_gpio.h"
#define DBG_TAG "drv_gpio"
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])
#define GPIO_INFO_MAP(gpio)                                                                                               \
{                                                                                                                         \
    gpio_port_map |= (1 << GPIO_INDEX_##gpio);                                                                            \
    gpio_port_base[GPIO_INDEX_##gpio] = Port##gpio;                                                                       \
}

void __os_hw_pin_init(void)
{
#if defined(GPIOA)
    GPIO_INFO_MAP(A);
#endif
#if defined(GPIOB)
    GPIO_INFO_MAP(B);
#endif
#if defined(GPIOC)
    GPIO_INFO_MAP(C);
#endif
#if defined(GPIOD)
    GPIO_INFO_MAP(D);
#endif
#if defined(GPIOE)
    GPIO_INFO_MAP(E);
#endif
#if defined(GPIOF)
    GPIO_INFO_MAP(F);
#endif
#if defined(GPIOG)
    GPIO_INFO_MAP(G);
#endif
#if defined(GPIOH)
    GPIO_INFO_MAP(H);
#endif
#if defined(GPIOI)
    GPIO_INFO_MAP(I);
#endif
#if defined(GPIOJ)
    GPIO_INFO_MAP(J);
#endif
#if defined(GPIOK)
    GPIO_INFO_MAP(K);
#endif
}

static void hc32_pin_write(struct os_device *dev, os_base_t pin, os_base_t value)
{
    const struct pin_index *index;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return;
    }

    if(value != 0)
        PORT_SetBits(index->gpio_port, 1 << PIN_OFFSET(pin));
    else
        PORT_ResetBits(index->gpio_port, 1 << PIN_OFFSET(pin));
}

static int hc32_pin_read(struct os_device *dev, os_base_t pin)
{
    int                     value;
    const struct pin_index *index;

    value = PIN_LOW;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return value;
    }

    value = PORT_GetBit(index->gpio_port, (en_pin_t)(1 << PIN_OFFSET(pin)));

    return value;
}

static void hc32_pin_mode(struct os_device *dev, os_base_t pin, os_base_t mode)
{
    struct pin_index *index;
    stc_port_init_t GPIO_Cfg;

    MEM_ZERO_STRUCT(GPIO_Cfg);

#if (PIN_PULL_STATE)
    os_base_t         level;
#endif

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return;
    }

    switch(mode) {
        case PIN_MODE_OUTPUT:
            /* output setting */
            GPIO_Cfg.enPinMode = Pin_Mode_Out;
            GPIO_Cfg.enPullUp = Enable;
            break;
        case PIN_MODE_INPUT:
            /* input setting: not pull. */
            GPIO_Cfg.enPinMode = Pin_Mode_In;
            break;

        case PIN_MODE_INPUT_PULLUP:
            /* input setting: pull up. */
            GPIO_Cfg.enPinMode = Pin_Mode_In;
            GPIO_Cfg.enPullUp = Enable;

            break;
        case PIN_MODE_INPUT_PULLDOWN:

            /* input setting: pull down. */
            GPIO_Cfg.enPinMode = Pin_Mode_In;
            GPIO_Cfg.enPullUp = Disable;
            break;
        case PIN_MODE_OUTPUT_OD:
            /* output setting: od. */
            GPIO_Cfg.enPinMode = Pin_Mode_Out;
            GPIO_Cfg.enLatch = Enable;
            GPIO_Cfg.enPinOType = Pin_OType_Od;
            GPIO_Cfg.enPinDrv = Pin_Drv_H;

            break;

        default:

            break;
    }
    
#if (PIN_PULL_STATE)
    /* remeber the pull state. */
    level = os_irq_lock();
    index->pin_pulls[__PIN_INDEX(pin)].pull_up = GPIO_Cfg.enPullUp;
    os_irq_unlock(level);
#endif

    PORT_Init(index->gpio_port, 1 << PIN_OFFSET(pin), &GPIO_Cfg);
}

static os_err_t
hc32_pin_attach_irq(struct os_device *device, os_int32_t pin, os_uint32_t mode, void (*hdr)(void *args), void *args)
{
    struct pin_index       *index = OS_NULL;
    os_base_t               level;
    struct pin_irq_param   *irq = OS_NULL;
    struct pin_irq_param   *tmp = OS_NULL;

    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    irq = (struct pin_irq_param *)os_calloc(1, sizeof(struct pin_irq_param));
    OS_ASSERT(irq != OS_NULL);

    level = os_irq_lock();
    os_list_for_each_entry(tmp, &hc_gpio_irq_list, struct pin_irq_param, list)
    {
        if(tmp->pin == pin)
        {
            if(tmp->hdr  == hdr   &&
                    tmp->mode == mode  &&
                    tmp->args == args)
            {
                os_irq_unlock(level);
                os_free(irq);
                return OS_EOK;
            }
            else
            {
                os_irq_unlock(level);
                os_free(irq);
                return OS_EBUSY;
            }
        }
    }

    irq->pin  = pin;
    irq->hdr  = hdr;
    irq->mode = mode;
    irq->args = args;

    os_list_add_tail(&hc_gpio_irq_list, &irq->list);
    
    os_irq_unlock(level);
    
    return OS_EOK;
}

static os_err_t hc32_pin_irq_enable(struct os_device *device, os_base_t pin, os_uint32_t enabled)
{
    struct pin_index   *index = OS_NULL;
    os_base_t                 level = 0;
    struct pin_irq_param     *irq = OS_NULL;
    
    stc_exint_config_t stcExtiConfig;
    stc_irq_regi_conf_t stcIrqRegiConf;
    stc_port_init_t stcPortInit;

    MEM_ZERO_STRUCT(stcExtiConfig);
    MEM_ZERO_STRUCT(stcIrqRegiConf);
    MEM_ZERO_STRUCT(stcPortInit);
    
    index = get_pin_index(pin);
    if (index == OS_NULL)
    {
        return OS_ENOSYS;
    }

    if (enabled == PIN_IRQ_ENABLE)
    {
        level = os_irq_lock();

        os_list_for_each_entry(irq, &hc_gpio_irq_list, struct pin_irq_param, list)
        {
            if(irq->pin == pin)
            {
                if(hc_pin_irq_map[__PIN_INDEX(pin)].pin_param == irq)
                {
                    os_irq_unlock(level);
                    return OS_EOK;
                }

                if(OS_NULL != hc_pin_irq_map[__PIN_INDEX(pin)].pin_param)
                {
                    os_irq_unlock(level);
                    return OS_EBUSY;
                }
                
                switch (irq->mode)
                {
                    case PIN_IRQ_MODE_RISING:
                        stcExtiConfig.enExtiLvl = ExIntRisingEdge;
                        break;
                    case PIN_IRQ_MODE_FALLING:
                        stcExtiConfig.enExtiLvl = ExIntFallingEdge;
                        break;
                    case PIN_IRQ_MODE_LOW_LEVEL:
                        stcExtiConfig.enExtiLvl = ExIntLowLevel;
                        break;
                    case PIN_IRQ_MODE_RISING_FALLING:
                        stcExtiConfig.enExtiLvl = ExIntBothEdge;
                    default:
                        os_irq_unlock(level);
                        return OS_ENOSYS;
                }

                stcExtiConfig.enExitCh = EXTI_CH(pin);
                stcExtiConfig.enFilterEn = Enable;
                stcExtiConfig.enFltClk = Pclk3Div8;
                EXINT_Init(&stcExtiConfig);

                stcPortInit.enExInt = Enable;
                stcPortInit.enPullUp = index->pin_pulls[__PIN_INDEX(pin)].pull_up;
                PORT_Init(index->gpio_port, 1 << PIN_OFFSET(pin), &stcPortInit);

                stcIrqRegiConf.enIntSrc = INT_SRC(pin);
                stcIrqRegiConf.enIRQn = hc_pin_irq_map[__PIN_INDEX(pin)].irqno;
                stcIrqRegiConf.pfnCallback = hc_pin_irq_map[__PIN_INDEX(pin)].pfnCallback;
                enIrqRegistration(&stcIrqRegiConf);

                NVIC_ClearPendingIRQ(stcIrqRegiConf.enIRQn);
                NVIC_SetPriority(stcIrqRegiConf.enIRQn, DDL_IRQ_PRIORITY_15);
                NVIC_EnableIRQ(stcIrqRegiConf.enIRQn);

                hc_pin_irq_map[__PIN_INDEX(pin)].pin_param = irq;
            }
        }

        os_irq_unlock(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        level = os_irq_lock();
        
        os_list_for_each_entry(irq, &hc_gpio_irq_list, struct pin_irq_param, list)
        {
            if(irq->pin == pin)
            {
                if(hc_pin_irq_map[__PIN_INDEX(pin)].pin_param == OS_NULL)
                {
                    os_irq_unlock(level);
                    return OS_EOK;
                }

                switch (irq->mode)
                {
                    case PIN_IRQ_MODE_RISING:
                    case PIN_IRQ_MODE_FALLING:
                    case PIN_IRQ_MODE_HIGH_LEVEL:
                    case PIN_IRQ_MODE_LOW_LEVEL:
                    case PIN_IRQ_MODE_RISING_FALLING:
                        break;
                    default:
                        os_irq_unlock(level);
                        return OS_ENOSYS;
                }

                stcPortInit.enExInt = Disable;
                stcPortInit.enPullUp = index->pin_pulls[__PIN_INDEX(pin)].pull_up;
                PORT_Init(index->gpio_port, 1 << PIN_OFFSET(pin), &stcPortInit);

                stcExtiConfig.enExitCh = EXTI_CH(pin);
                stcExtiConfig.enFilterEn = Disable;
                stcExtiConfig.enFltClk = Pclk3Div8;
                EXINT_Init(&stcExtiConfig);

                stcIrqRegiConf.enIRQn = hc_pin_irq_map[__PIN_INDEX(pin)].irqno;
                enIrqResign(stcIrqRegiConf.enIRQn);

                NVIC_ClearPendingIRQ(stcIrqRegiConf.enIRQn);
                NVIC_EnableIRQ(stcIrqRegiConf.enIRQn);
                
                hc_pin_irq_map[__PIN_INDEX(pin)].pin_param = OS_NULL;
            }
        }
        
        os_irq_unlock(level);
    }
    else
    {
        return OS_ENOSYS;
    }
    
    return OS_EOK;
}

int os_hw_pin_init(void)
{
    struct pin_index *tmp = OS_NULL;
    os_uint8_t gpio_port = 0;

#if (PIN_PULL_STATE)
    os_uint8_t gpio_pin = 0;
#endif

    __os_hw_pin_init();

    for(gpio_port = 0; gpio_port < GPIO_PORT_MAX; gpio_port++)
    {
        if((gpio_port_map & (1 << gpio_port)))
        {
            tmp = (struct pin_index *)os_calloc(1, sizeof(struct pin_index));

            OS_ASSERT(tmp != OS_NULL);

            tmp->gpio_port = gpio_port_base[gpio_port];
#if (PIN_PULL_STATE)
            for(gpio_pin = 0; gpio_pin < GPIO_PIN_PER_PORT; gpio_pin++)
            {
                tmp->pin_pulls[gpio_pin].pull_up   = Disable;
                tmp->pin_pulls[gpio_pin].pull_down = Disable;
            }
#endif
            indexs[gpio_port] = tmp;

        }
        else
        {
            indexs[gpio_port] = OS_NULL;
        }
    }
    
    return os_device_pin_register(0, &_hc32_pin_ops, OS_NULL);
}
